# linguistic-data-analysis-I

./: .gitignore  README.md  _config.yml  _metadata.yml  _quarto.yml  index.md  japanese_nlp_enhanced.py  main.py  note.md  pyproject.toml  test_enhanced_pipeline.py  todo.html  todo.md
.github/workflows/: auto-render.yml  generate-syllabus-pdf.yml  publish-quarto.yml  verify-render.yml
2025/assignments/: index.md
2025/notebooks/: japanese-nlp-test.ipynb  session-11.ipynb  session-12.html  session-12.ipynb  session-5.ipynb  session-6.ipynb
2025/sessions/: README.md  index.md  outline.md
2025/slides/: Untitled-1.yaml  _slides.yml  coca_table.md  session-1.qmd  session-10.qmd  session-11.qmd  session-11.tex  session-12.qmd  session-13.qmd  session-2.qmd  session-3.qmd  session-4.qmd  session-5.qmd  session-6.qmd  session-7.qmd  session-8.qmd  session-9.qmd
2025/syllabus/: README.md  index.md  policies.md  readings.md  schedule.md
Mizumoto-etal/: Error Tags in CLC FCE.xlsx  OSF_Accuracy_Python.ipynb  OSF_Accuracy_R.ipynb  ~$Error Tags in CLC FCE.xlsx
_extra/: GITHUB_PAGES_SETUP.md  RENDERING.md  webapp-requirements.md
css/: slides.scss  style.scss  styles.css
docs/: GITHUB_PAGES_SETUP.html  RENDERING.html  index.html  note.html  robots.txt  search.json  sitemap.xml  todo.html
docs/Mizumoto-etal/: OSF_Accuracy_Python.html  OSF_Accuracy_Python_LDA1.html  OSF_Accuracy_R.html
docs/resources/: index.html
resources/: index.md
resources/code-examples/: index.md
resources/corpora/: available-corpora.md  learner-corpora.html  (+1 more)
scripts/: convert-to-jekyll.sh
(+2948 files in other folders)
